# vuanem-insider-export

./: .gitignore  package-lock.json  package.json  tsconfig.json
.github/workflows/: dataflow.yaml  function.yaml  main.yaml
dataflow/: .dockerignore  Dockerfile  main.py  metadata.json  pyproject.toml  requirements.txt
src/: index.ts  utils.ts
src/dataflow/: index.ts
src/db/: bigquery.ts
src/insider/: repo.ts  service.ts
src/insider/resource/: rawUserData.ts
src/storage/: cloudStorage.ts
test/: testUnits.ts
