[tool.poetry]
name = "vuanem-insider-export-dataflow"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
apache-beam = {extras = ["gcp"], version = "2.38.0"}

[tool.poetry.dev-dependencies]
requests = "^2.27.1"
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
